[package]
name = "afk"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
shaco = "0.6.0"
tokio = { version = "1.28.1", features = ["full"] }
futures-util = "0.3.28"